// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <ResponsiveWrapper /> should render correctly 1`] = `
.c0 {
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`component <ResponsiveWrapper overflowY /> should not apply overFlowY without an overflowYOffset or not responsive  1`] = `
.c0 {
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`component <ResponsiveWrapper responsive /> should render correctly  1`] = `
.c0 {
  position: relative;
  overflow-x: auto;
}

<div
  className="c0"
/>
`;

exports[`component <ResponsiveWrapper responsive overflowY overflowYOffset="250px" /> should render correctly when overflowYOffset is provided  1`] = `
.c0 {
  position: relative;
  overflow-x: auto;
  padding-bottom: 250px;
  margin-bottom: -250px;
}

<div
  className="c0"
/>
`;
